# modEQ

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE.md  Makefile  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  analyser__controller_8h.html  analyser__controller_8h__dep__incl.dot  analyser__controller_8h__dep__incl.md5  analyser__controller_8h__incl.dot  analyser__controller_8h__incl.md5  analyser__controller_8h_source.html  analyser__view_8h.html  analyser__view_8h__dep__incl.dot  analyser__view_8h__dep__incl.md5  analyser__view_8h__incl.dot  analyser__view_8h__incl.md5  analyser__view_8h_source.html  annotated.html  appveyor.yml  band__controller_8h.html  band__controller_8h__dep__incl.dot  band__controller_8h__dep__incl.md5  band__controller_8h__incl.dot  band__controller_8h__incl.md5  band__controller_8h_source.html  band__view_8h.html  band__view_8h__dep__incl.dot  band__view_8h__dep__incl.md5  band__view_8h__incl.dot  band__view_8h__incl.md5  band__view_8h_source.html  base__processor_8h.html  base__processor_8h__dep__incl.dot  base__processor_8h__dep__incl.md5  (+447 more)
.ci/: linux-before_install.sh  linux-before_script.sh  linux-build_script.sh
.circleci/: config.yml
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: Analyser.h  CMakeLists.txt  FrequalizerEditor.cpp  FrequalizerEditor.h  FrequalizerProcessor.cpp  FrequalizerProcessor.h  SocialButtons.h  modEQ.hpp  modEQ_editor.cpp  modEQ_editor.h  modEQ_processor.cpp  modEQ_processor.h
Source/analyser/: modulation_source_analyser.h  spectrum_analyser.h
Source/controller/: BandController.cpp  BandController.h  analyser_controller.cpp  analyser_controller.h  band_controller.cpp  band_controller.h  equalizer_plot_controller.cpp  equalizer_plot_controller.h  gain_controller.cpp  gain_controller.h  menu_bar_controller.cpp  menu_bar_controller.h  modulation_connect_item_controller.cpp  modulation_connect_item_controller.h  modulation_source_controller.cpp  modulation_source_controller.h
Source/look_and_feel/: TobanteLookAndFeel.h  tobante_look_and_feel.cpp  tobante_look_and_feel.h
Source/parameters/: parameters.h  text_value_converter.cpp  text_value_converter.h
Source/processor/: BaseProcessor.h  EqualizerProcessor.cpp  EqualizerProcessor.h  base_processor.h  equalizer_processor.cpp  equalizer_processor.h  gain_processor.cpp  gain_processor.h  modulation_source_processor.cpp  modulation_source_processor.h
Source/render/: svg.cpp  svg.h
Source/settings/: constants.h
Source/utils/: TextValueConverters.h  constants.h  parameters.cpp  parameters.h  text_value_converter.cpp  text_value_converter.h
Source/view/: BandView.cpp  BandView.h  EqualizerPlotView.cpp  EqualizerPlotView.h  analyser_view.cpp  analyser_view.h  band_view.cpp  band_view.h  equalizer_plot_view.cpp  equalizer_plot_view.h  gain_view.cpp  gain_view.h  info_view.cpp  info_view.h  menu_bar_view.cpp  menu_bar_view.h  modulation_connect_item_view.cpp  modulation_connect_item_view.h  modulation_source_view.cpp  modulation_source_view.h  settings_view.cpp  settings_view.h  social_buttons.cpp  social_buttons.h
Tests/: test_main.cpp  test_main.h  test_text_converters.h
ci/: linux-deps.sh  linux-env.sh
cmake/: CodeCoverage.cmake  CompilerOptions.cmake  CompilerWarnings.cmake
plugin/: CMakeLists.txt  modEQ.hpp  modEQ_editor.cpp  modEQ_editor.h  modEQ_processor.cpp
plugin/controller/: analyser_controller.cpp  band_controller.cpp  menu_bar_controller.cpp  modulation_source_controller.cpp  modulation_source_controller.h
plugin/look_and_feel/: tobante_look_and_feel.cpp  tobante_look_and_feel.h
plugin/processor/: base_processor.h  equalizer_processor.h  modulation_source_processor.h
plugin/render/: svg.cpp
plugin/settings/: constants.h  theme.hpp
plugin/view/: analyser_view.cpp  band_view.cpp  band_view.h  menu_bar_view.cpp  menu_bar_view.h  modulation_connect_item_view.cpp  modulation_source_view.cpp  modulation_source_view.h  social_buttons.cpp
scripts/: bump_version.sh  install_linux.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+43 more)
test/: test_text_converters.h
